@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 jar {
@@ -23,7 +24,9 @@ dependencies {
 test {
     useJUnitPlatform()
 
-1//    jvmArgs("-verbose:gc",
+    jvmArgs(
+            "--add-opens=java.base/java.lang=ALL-UNNAMED"
+//            "-verbose:gc",
 //            "-Xms20M",
 //            "-Xmx20M",
 //            "-Xmn10M",
@@ -31,5 +34,5 @@ test {
 ////            "-Xlog:gc*",
 //            "-XX:+PrintGCDetails",
 //            "-XX:SurvivorRatio=8"
-//    )
+    )
 }
